# PWJC--Video-Player-in-terminal

./: .gitignore  CMakeLists.txt  README.md  build.sh  sample_video.avi
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/inc/: IFrameConverter.hpp  IFrameScaler.hpp  IMediaPlayer.hpp
lib/src/: IFrameConverter.cpp  IFrameScaler.cpp  IMediaPlayer.cpp
tests/: CMakeLists.txt  FooTests.cpp
